--- a/package.json
+++ b/package.json
@@ -19,13 +19,25 @@
     "test-build": "npm run check-style && npm run build"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
     "next": "^15.2.4",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.6",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.8.2",
+    "recharts": "^3.1.2",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
